fixed json root path

--- a/Views/Home/Administration.cshtml
+++ b/Views/Home/Administration.cshtml
@@ -25,7 +25,7 @@
         var item = new PortManager();
         if (Model.port == null || Model.ip == null)
         {
-            using (var r = new StreamReader(@"../../ftproot/Domains/AGS_joey/Connection_Config/ConnectionConfig.json"))
+            using (var r = new StreamReader(@"c:/ftproot/Domains/AGS_joey/Connection_Config/ConnectionConfig.json"))
             {
                 var json = r.ReadToEnd();
                 item = JsonConvert.DeserializeObject<PortManager>(json);
