--- a/Views/Home/Administration.cshtml
+++ b/Views/Home/Administration.cshtml
@@ -54,7 +54,7 @@
                                     var ip = item.ip;
                                     var port = item.port;
                                     var route = @"/{controller}";
-                                    var final = @"http://" + ip + ":" + port + route;
+                                    var final = @"https://" + ip + port + route;
                                 }
                                 <h6>@final</h6>
                             </div>
