--- a/Views/Partials/_SurveyStats.cshtml
+++ b/Views/Partials/_SurveyStats.cshtml
@@ -63,7 +63,7 @@
             <div class="col-3">
                 <div class="row match-height">
                     <div class="col-6 ratio vm"><p>@averageUx/5</p></div>
-                    <div class="col-6"><p>by @Model.Xans.Count(ux => ux.iExperienceTypeID == 2)</p></div>
+                    <div class="col-6 ratio"><p>by @Model.Xans.Count(ux => ux.iExperienceTypeID == 2)</p></div>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
             <div class="col-3">
                 <div class="row match-height">
                     <div class="col-6 ratio vm"><p>@averageTx/5</p></div>
-                    <div class="col-6"><p>by @Model.Xans.Count(ux => ux.iExperienceTypeID == 3)</p></div>
+                    <div class="col-6 ratio"><p>by @Model.Xans.Count(ux => ux.iExperienceTypeID == 3)</p></div>
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
             <div class="col-3">
                 <div class="row match-height">
                     <div class="col-6 ratio vm"><p>@averageAx/5</p></div>
-                    <div class="col-6"><p>by @Model.Xans.Count(ux => ux.iExperienceTypeID == 3 || ux.iExperienceTypeID == 2)</p></div>
+                    <div class="col-6 ratio"><p>by @Model.Xans.Count(ux => ux.iExperienceTypeID == 3 || ux.iExperienceTypeID == 2)</p></div>
                 </div>
             </div>
         </div>
