--- a/Views/Home/Administration.cshtml
+++ b/Views/Home/Administration.cshtml
@@ -35,6 +35,8 @@
         {
             item = Model;
         }
+        <h2> Welcome @user.strFirstName</h2>
+        <hr />
         <div class="row hm">
             <div class="col-2"></div>
             <div class="card bg-primary col-8">
@@ -59,7 +61,7 @@
                                 <h6>@final</h6>
                             </div>
                         </div>
-                        <hr/>
+                        <hr />
                         @using (Html.BeginForm("Administrate", "Home", FormMethod.Post, new { @id = "frmPortManager", @name = "frmPortManager" }))
                         {
                             <div class="row mb-1 hm match-height">
@@ -75,7 +77,7 @@
                                     <label for="port" style="margin-bottom: 0px">Port</label>
                                 </div>
                                 <div class="col-6">
-                                    @Html.EditorFor(pman => pman.port, item.port, new { htmlAttributes = new { @class = "form-control", @Value= @item.port } })
+                                    @Html.EditorFor(pman => pman.port, item.port, new { htmlAttributes = new { @class = "form-control", @Value = @item.port } })
 
                                 </div>
                             </div>
@@ -97,6 +99,8 @@
     }
     else
     {
+        <h2> Welcome @user.strFirstName</h2>
+        <hr />
         <div class="row hm">
             <div class="col-2"></div>
             <div class="card bg-primary col-8">
@@ -113,7 +117,7 @@
                             <a class="btn btn-primary col-5" href="@Url.Action("Index", "cmsClients")">Client Index</a>
                         </div>
                         <div class="row mb-1">
-                            <a class="btn btn-primary col-5" href="@Url.Action(" Index", "cmsExperienceAnswers" )">Experience Answer Index</a>
+                            <a class="btn btn-primary col-5" href="@Url.Action("Index", "cmsExperienceAnswers" )">Experience Answer Index</a>
                             <div class="col-2"></div>
                             <a class="btn btn-primary col-5" href="@Url.Action("Index", "cmsResults")">Result Index</a>
                         </div>
