--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @{
+
     var db = new MedicalDBContext();
     var allStats = new AllStats();
     var lstClients = db.tblClients.Where(cli => cli.bIsDeleted != true).ToList();
@@ -143,36 +144,73 @@
     allStats.Results = lstAllResults;
 }
 
+<style>
+    .rnd {
+        border-radius: 50%;
+        padding: 5px;
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    .bg-ag {
+        background: #a4c639;
+        color: black;
+    }
+
+    .bg-ac {
+        background: #5b39c6;
+        color: black;
+        line-height: 30px;
+        height: 35px;
+        margin-top: 12.5px;
+        z-index: -1;
+        border-radius: 17.5px;
+    }
+
+    .al {
+        color: black;
+        margin-left: 30px;
+        margin-top: 2px;
+    }
+
+    .front {
+        z-index: 1;
+    }
+</style>
+
 <h1>Welcome to the home of AG Softworks</h1>
 <hr />
 <body>
-<div class="row match-height mb-5">
-    <div class="col-6">
-        @Html.Partial("~/Views/Partials/_UserStats.cshtml", allStats)
-    </div>
-    <div class="col-6">
-        @Html.Partial("~/Views/Partials/_SurveyStats.cshtml", allStats)
-    </div>
-</div>
-<hr />
-<div class="row match-height">
-    <div class="col-3">
-    </div>
-    <div class="card bg-success col-6">
-        <div class="row match-height">
-            <div class="col-2">
-                <i class="fab fa-android fa-2x"></i>
-            </div>
-            <div class="col-10">
-                <a href="https://drive.google.com/open?id=1owJuRraxtJLtpx73YJ-w6J64FXzSmnwx">
-                    <h4 style="color: black">Current link for the AGS Medical APK</h4>
-                </a>
-            </div>
-
+    <div class="row match-height mb-5">
+        <div class="col-6">
+            @Html.Partial("~/Views/Partials/_UserStats.cshtml", allStats)
+        </div>
+        <div class="col-6">
+            @Html.Partial("~/Views/Partials/_SurveyStats.cshtml", allStats)
         </div>
     </div>
-    <div class="col-3">
+    <hr />
+    <div class="row match-height">
+        <div class="col-3">
+        </div>
+        <div class="col-6">
+            <a class="front" href="https://drive.google.com/open?id=1owJuRraxtJLtpx73YJ-w6J64FXzSmnwx">
+                <div class="row">
+                    <div class="col-1">
+                        <i class="fab fa-android bg-ag fa-3x rnd"></i>
+                    </div>
+                    <div class="col-11 bg-ac">
+
+                        <h4 class="al">Current link for the AGS Medical APK</h4>
+
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-3">
+        </div>
     </div>
-</div>
 
 </body>
